--- a/PROYECTO-MJC memoorize/juegos/juego rompe/niveles/css/style.css
+++ b/PROYECTO-MJC memoorize/juegos/juego rompe/niveles/css/style.css
@@ -130,7 +130,8 @@ body {
   border-radius: 15px;
   padding: 1px 0;
   margin: 0px auto;
-  width: 60%;
+  margin-left: -16%;
+  width: 130%;
   box-shadow: 0 0 15px rgba(16, 137, 250, 0.8), 0 0 20px rgba(214, 214, 16, 0.6); /* Brillo alrededor */
   transition: box-shadow 0.3s ease-in-out; /* Transición suave para el efecto */
 }
