--- a/PROYECTO-MJC memoorize/menu/css/style.css
+++ b/PROYECTO-MJC memoorize/menu/css/style.css
@@ -224,7 +224,6 @@ body{
     border: 5px solid #ffcc00; 
     text-shadow: 3px 3px 0px #ffffff00,   
     6px 6px 0px #8b451300; 
-    border: none;
       box-shadow: none;
     border-radius: 30px; 
     background: radial-gradient(circle, rgba(255, 255, 110, 0.699) 0%, rgb(33, 148, 202) 100%);
@@ -415,7 +414,7 @@ body{
     transition: transform 200ms;
 }
 /*titulo*/
-.menu-title {
+.menutitle {
     font-family: 'Pirata One', cursive; 
     text-align: center;
     text-shadow: 0 0 10px #eeff00, 0 0 20px #ffcc00, 0 0 30px #ff8800;
@@ -425,6 +424,27 @@ body{
     padding: 0px;
     letter-spacing: 0px;  /* Espaciado entre letras */
     text-transform: uppercase;  
+}
+h1 {
+    font-family: 'Pirata One', cursive; 
+    text-align: center;
+    text-shadow: 0 0 10px #eeff00, 0 0 20px #ffcc00, 0 0 30px #ff8800;
+    font-size: 5.0rem;
+    color: #ff8400;  
+    position: relative;
+    padding: 0px;
+    letter-spacing: 0px;  /* Espaciado entre letras */
+    text-transform: uppercase;  
+}
+#menutitle::after {
+    content: "";
+    animation: blink 0.5s step-start infinite;
+}
+
+@keyframes blink {
+    50% {
+        opacity: 0;
+    }
 }
 
 @keyframes vanishIn {
