--- a/PROYECTO-MJC memoorize/menu/css/style.css
+++ b/PROYECTO-MJC memoorize/menu/css/style.css
@@ -436,7 +436,7 @@ h1 {
     letter-spacing: 0px;  /* Espaciado entre letras */
     text-transform: uppercase;  
 }
-#menutitle::after {
+#h1::after {
     content: "";
     animation: blink 0.5s step-start infinite;
 }
@@ -1244,7 +1244,7 @@ nav {
         color: #ffffff00;
     }
     /*titulo*/
-    .menu-title {
+    .menutitle {
         margin-bottom: 0%;
         font-size: 2.9em;
         border-radius: 50px; 
