--- a/PROYECTO-MJC memoorize/menu/css/style.css
+++ b/PROYECTO-MJC memoorize/menu/css/style.css
@@ -3,7 +3,6 @@ body{
     background-repeat: no-repeat;
     font-family:'Pirata One', cursive;
     background-size: cover;
-    
     background-attachment: fixed;
     overflow: hidden;
     
@@ -11,6 +10,7 @@ body{
     margin: 0;
     animation: puffIn 1s ease-in-out
 }
+
 #volumeControl {
     width: 30%; 
     margin-top: 15px;
@@ -159,8 +159,8 @@ body{
     text-shadow: 3px 3px 0px #ffffff00,   
     6px 6px 0px #8b451300; 
     border-radius: 30px; 
-    background: linear-gradient(135deg, rgba(52, 152, 219, 0.9) 0%, rgba(41, 128, 185, 0.7) 100%);
-    box-shadow: 0 0 15px rgb(255, 225, 0),
+    background: radial-gradient(circle, rgba(255, 255, 110, 0.699) 0%, rgb(33, 148, 202) 100%);
+    box-shadow: 0 0 15px rgb(255, 166, 0),
     inset 0 0 10px rgb(44, 166, 227); 
 }
 .cerrar-sesion .btn {
@@ -179,6 +179,23 @@ body{
 
 .cerrar-sesion .btn:hover {
     background-color: #c82333; 
+}
+
+.info{
+    cursor: pointer;
+}
+.fa-pen-to-square:hover{
+    transform: scale(1.1);
+    color: #e9673f;
+    cursor: pointer;
+}
+#personalInfo{
+    color: #3d3c3c;
+    padding-bottom: 8px;
+    padding-top: 8px;
+}
+.titlePerfil{
+    color: #1f1e1e;
 }
 
 .cerrar-sesion .cerrar-img {
