--- a/PROYECTO-MJC memoorize/login/recuperar/css/style.css
+++ b/PROYECTO-MJC memoorize/login/recuperar/css/style.css
@@ -32,12 +32,60 @@ body{
     background-color: #ffae00;
     box-shadow: 0px 0px 15px rgba(255, 174, 0, 0.8);
 }
-
+/* Modal container */
+.modal {
+    display: none; /* Ocultar por defecto */
+    position: fixed;
+    z-index: 1000; /* Aparece por encima de todo */
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.5); /* Fondo semitransparente */
+  }
+  
+  /* Modal content */
+  .modal-content {
+    background-color: #fff;
+    margin: 15% auto;
+    padding: 20px;
+    border-radius: 10px;
+    width: 80%;
+    max-width: 400px;
+    text-align: center;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  }
+  
+  /* Close button */
+  .close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    cursor: pointer;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: black;
+    text-decoration: none;
+  }
+  
 #response{
     color: #000000;
     font-size: 1.0em; 
     
 }
+.text1{
+    color:#000000; 
+    text-align: center;
+    font-family: 'Pirata One', cursive; 
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.8), 0 0 20px rgba(242, 143, 22, 0.6);
+    font-size: 25px;
+    margin-top: 5%;
+}
+
 /*Formulario*/
 #formulario{
     width: 40%;
@@ -171,6 +219,7 @@ body{
 }
 input.input {    
     padding-right: 2.5rem;
+    margin-top: 10%;
     background-color: rgba(255, 255, 255, 0.427);
     border: 1px solid #F28F16;
     border-radius: 5px;
@@ -214,10 +263,14 @@ text:hover{
 }
 .text2{
     color:#014d7d; 
+    background-color: #ffa229; 
     text-align: center;
+    margin-top: 8%;
+    padding: 10px 20px;
     font-family: 'Pirata One', cursive; 
     text-shadow: 0 0 10px rgba(255, 174, 0, 0.8), 0 0 20px rgba(242, 143, 22, 0.6);
-    font-size: 40px;
+    font-size: 23px;
+    border-radius: 15px
 }
 .text2:hover {
     color: #ca7815;
