--- a/PROYECTO-MJC memoorize/juegos/juego rompe/niveles/css/style.css
+++ b/PROYECTO-MJC memoorize/juegos/juego rompe/niveles/css/style.css
@@ -52,11 +52,11 @@ body {
 }
 
 .modal-content {
-  background-color: #000000;
+  background-color: #00000071;
   margin: 10% auto;
   padding: 20px;
   border-radius: 12px; /* Bordes más redondeados */
-  width: 90%;
+  width: 100%;
   max-width: 400px;
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2); /* Sombra más suave */
   animation: fadeIn 0.4s ease-out; /* Animación de aparición */
@@ -131,6 +131,8 @@ body {
   padding: 1px 0;
   margin: 0px auto;
   margin-left: -16%;
+  margin-bottom: 7%;
+ 
   width: 130%;
   box-shadow: 0 0 15px rgba(16, 137, 250, 0.8), 0 0 20px rgba(214, 214, 16, 0.6); /* Brillo alrededor */
   transition: box-shadow 0.3s ease-in-out; /* Transición suave para el efecto */
@@ -279,7 +281,7 @@ body {
   .modal-content {
     width: 200px;
     padding: 20px;
-    font-size: 1.3em;
+    font-size: 1.8em;
   }
   #collage #sortable li {
     border: none;
