--- a/PROYECTO-MJC memoorize/menu/css/style.css
+++ b/PROYECTO-MJC memoorize/menu/css/style.css
@@ -1277,7 +1277,7 @@ nav {
         
     }
     
-    .h1{
+    h1{
         margin-bottom: 0%;
         font-size: 12px;
         border-radius: 50px; 
