--- a/PROYECTO-MJC memoorize/juego3/estilos/estilo_cartas.css
+++ b/PROYECTO-MJC memoorize/juego3/estilos/estilo_cartas.css
@@ -369,14 +369,14 @@ body {
 }
 
 .score-modal-content {
-    background: radial-gradient(circle, rgb(214, 214, 16) 0%, rgb(16, 137, 250) 100%);
+    background: radial-gradient(circle, rgba(214, 214, 16, 0.527) 0%, rgba(16, 137, 250, 0.411) 100%);
     box-shadow: 0 0 15px rgb(255, 166, 0),
     inset 0 0 10px rgb(44, 166, 227); 
     border-radius: 15px;
-    padding: 2rem;
+    padding: 1rem;
     border-radius: 10px;
     max-width: 800px;
-    width: 90%;
+    width: 80%;
     max-height: 90vh;
     overflow-y: auto;
 }
@@ -389,7 +389,7 @@ body {
 .round-info {
     margin: 1rem 0;
     padding: 1rem;
-    background: radial-gradient(circle, rgb(214, 214, 16) 0%, rgb(16, 137, 250) 100%);
+    background: radial-gradient(circle, rgba(214, 214, 16, 0.726) 0%, rgba(16, 137, 250, 0.61) 100%);
     box-shadow: 0 0 15px rgb(255, 166, 0),
     inset 0 0 10px rgb(44, 166, 227); 
     border-radius: 5px;
