--- a/PROYECTO-MJC memoorize/juegos/juego rompe/niveles/css/style.css
+++ b/PROYECTO-MJC memoorize/juegos/juego rompe/niveles/css/style.css
@@ -52,11 +52,12 @@ body {
 }
 
 .modal-content {
-  background-color: #00000071;
+  background-color: #000000b9;
   margin: 10% auto;
   padding: 20px;
+  font-size: 130%;
   border-radius: 12px; /* Bordes más redondeados */
-  width: 100%;
+  width: 120%;
   max-width: 400px;
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2); /* Sombra más suave */
   animation: fadeIn 0.4s ease-out; /* Animación de aparición */
